# cursedflux

./: .gitignore  database.example.env  generate_env.py  jwt.example.env  requirements.txt
frontend/: package-lock.json  package.json
frontend/src/: App.svelte
frontend/src/lib/: Login.svelte
frontend/src/utils/: api.ts
infra/dev/: compose.yaml  docker-compose.yaml
server/: Cargo.toml
server/migrations/2022-01-30-175602_create_function_generate_unique_short_id/: down.sql  up.sql
server/migrations/2022-01-30-182736_create_user_table/: down.sql  up.sql
server/src/: main.rs  schema.rs
server/src/controllers/: mod.rs  user.rs
server/src/extractors/: mod.rs
server/src/extractors/errors/: mod.rs
server/src/models/: user.rs
server/src/utils/: jwt.rs  mod.rs
