[package]
name = "cursedflux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
env_logger = "0.9.0"
serde = "1.0.135"
serde_json = "1.0.78"
dotenv = "0.15.0"

[dependencies.diesel]
version = "1.4.8"
features = ["postgres"]