[package]
name = "cursedflux"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.3"
actix-cors = "0.5.4"
env_logger = "0.9.0"
serde = { version = "1.0.135", features = ["serde_derive"] }
serde_json = "1.0.78"
dotenv = "0.15.0"
rand = "0.8.4"
argon2 = "0.3"
rand_core = { version = "0.6", features = ["std"] }
derive_more = "0.99.17"
jsonwebtoken = "8.0.1"
time = "0.2.27"

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.diesel]
version = "1.4.8"
features = ["postgres", "chrono", "serde_json", "uuid", "r2d2"]